@@ -2,7 +2,6 @@ package com.example.service;
 
 import com.example.entity.Employee;
 import com.example.repository.EmployeeRepository;
-import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -10,7 +9,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -27,100 +25,92 @@ public class EmployeeServiceTest {
     @InjectMocks
     private EmployeeService employeeService;
 
-    private Employee employee1;
-    private Employee employee2;
+    private Employee employee;
 
     @BeforeEach
     void setUp() {
-        employee1 = new Employee(1L, "John Doe", "IT", 60000.0, "john.doe@example.com");
-        employee2 = new Employee(2L, "Jane Doe", "HR", 50000.0, "jane.doe@example.com");
+        employee = new Employee("1", "John Doe", "IT");
     }
 
     @Test
-    void createEmployee_Success() {
-        when(employeeRepository.save(any(Employee.class))).thenReturn(employee1);
+    void createEmployee_ValidInput_ReturnsSavedEmployee() {
+        when(employeeRepository.save(any(Employee.class))).thenReturn(employee);
 
-        Employee savedEmployee = employeeService.createEmployee(employee1);
+        Employee savedEmployee = employeeService.createEmployee(employee);
 
-        assertNotNull(savedEmployee);
-        assertEquals(employee1.getName(), savedEmployee.getName());
-        verify(employeeRepository, times(1)).save(employee1);
+        assertEquals("1", savedEmployee.getId());
+        assertEquals("John Doe", savedEmployee.getName());
+        assertEquals("IT", savedEmployee.getDepartment());
+
+        verify(employeeRepository, times(1)).save(employee);
     }
 
     @Test
-    void getEmployeeById_Success() {
-        when(employeeRepository.findById(1L)).thenReturn(Optional.of(employee1));
+    void getEmployeeById_ExistingId_ReturnsEmployee() {
+        when(employeeRepository.findById("1")).thenReturn(Optional.of(employee));
 
-        Employee retrievedEmployee = employeeService.getEmployeeById(1L);
+        Optional<Employee> retrievedEmployee = employeeService.getEmployeeById("1");
 
-        assertNotNull(retrievedEmployee);
-        assertEquals(employee1.getName(), retrievedEmployee.getName());
-        verify(employeeRepository, times(1)).findById(1L);
+        assertTrue(retrievedEmployee.isPresent());
+        assertEquals("John Doe", retrievedEmployee.get().getName());
+
+        verify(employeeRepository, times(1)).findById("1");
     }
 
     @Test
-    void getEmployeeById_NotFound() {
-        when(employeeRepository.findById(1L)).thenReturn(Optional.empty());
+    void getEmployeeById_NonExistingId_ReturnsEmptyOptional() {
+        when(employeeRepository.findById("2")).thenReturn(Optional.empty());
 
-        assertThrows(EntityNotFoundException.class, () -> employeeService.getEmployeeById(1L));
-        verify(employeeRepository, times(1)).findById(1L);
+        Optional<Employee> retrievedEmployee = employeeService.getEmployeeById("2");
+
+        assertTrue(retrievedEmployee.isEmpty());
+
+        verify(employeeRepository, times(1)).findById("2");
     }
 
     @Test
-    void getAllEmployees_Success() {
-        when(employeeRepository.findAll()).thenReturn(Arrays.asList(employee1, employee2));
+    void getAllEmployees_ReturnsListOfEmployees() {
+        when(employeeRepository.findAll()).thenReturn(List.of(employee));
 
-        List<Employee> allEmployees = employeeService.getAllEmployees();
+        List<Employee> employees = employeeService.getAllEmployees();
 
-        assertNotNull(allEmployees);
-        assertEquals(2, allEmployees.size());
+        assertEquals(1, employees.size());
+        assertEquals("John Doe", employees.get(0).getName());
+
         verify(employeeRepository, times(1)).findAll();
     }
 
     @Test
-    void updateEmployee_Success() {
-        Employee existingEmployee = new Employee(1L, "Old Name", "Old Department", 40000.0, "old.email@example.com");
-        when(employeeRepository.findById(1L)).thenReturn(Optional.of(existingEmployee));
-        when(employeeRepository.save(any(Employee.class))).thenReturn(employee1);
+    void updateEmployee_ExistingId_ReturnsUpdatedEmployee() {
+        Employee employeeDetails = new Employee(null, "Updated Name", "Updated Dept");
+        when(employeeRepository.findById("1")).thenReturn(Optional.of(employee));
+        when(employeeRepository.save(any(Employee.class))).thenReturn(employee);
 
-        Employee updatedEmployee = employeeService.updateEmployee(1L, employee1);
+        Employee updatedEmployee = employeeService.updateEmployee("1", employeeDetails);
 
-        assertNotNull(updatedEmployee);
-        assertEquals(employee1.getName(), updatedEmployee.getName());
-        assertEquals(employee1.getDepartment(), updatedEmployee.getDepartment());
-        assertEquals(employee1.getSalary(), updatedEmployee.getSalary());
-        assertEquals(employee1.getEmail(), updatedEmployee.getEmail());
-        verify(employeeRepository, times(1)).findById(1L);
-        verify(employeeRepository, times(1)).save(existingEmployee);
+        assertEquals("Updated Name", updatedEmployee.getName());
+        assertEquals("Updated Dept", updatedEmployee.getDepartment());
+        verify(employeeRepository, times(1)).findById("1");
+        verify(employeeRepository, times(1)).save(employee);
     }
 
     @Test
-    void updateEmployee_NotFound() {
-        when(employeeRepository.findById(1L)).thenReturn(Optional.empty());
+    void updateEmployee_NonExistingId_ThrowsException() {
+        Employee employeeDetails = new Employee(null, "Updated Name", "Updated Dept");
+        when(employeeRepository.findById("2")).thenReturn(Optional.empty());
 
-        assertThrows(EntityNotFoundException.class, () -> employeeService.updateEmployee(1L, employee1));
-        verify(employeeRepository, times(1)).findById(1L);
+        assertThrows(IllegalArgumentException.class, () -> employeeService.updateEmployee("2", employeeDetails));
+        verify(employeeRepository, times(1)).findById("2");
         verify(employeeRepository, never()).save(any(Employee.class));
     }
 
     @Test
-    void deleteEmployee_Success() {
-        when(employeeRepository.existsById(1L)).thenReturn(true);
-        doNothing().when(employeeRepository).deleteById(1L);
+    void deleteEmployee_ExistingId_DeletesEmployee() {
+        doNothing().when(employeeRepository).deleteById("1");
 
-        employeeService.deleteEmployee(1L);
+        employeeService.deleteEmployee("1");
 
-        verify(employeeRepository, times(1)).existsById(1L);
-        verify(employeeRepository, times(1)).deleteById(1L);
-    }
-
-    @Test
-    void deleteEmployee_NotFound() {
-        when(employeeRepository.existsById(1L)).thenReturn(false);
-
-        assertThrows(EntityNotFoundException.class, () -> employeeService.deleteEmployee(1L));
-        verify(employeeRepository, times(1)).existsById(1L);
-        verify(employeeRepository, never()).deleteById(1L);
+        verify(employeeRepository, times(1)).deleteById("1");
     }
 }
 ```
